--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     "require": {
         "php": "^8.0",
         "filament/support": "^3.0|^4.0",
-        "illuminate/support": "^9.0|^10.0|^11.0",
+        "illuminate/support": "^8.0|^9.0|^10.0|^11.0",
         "spatie/laravel-package-tools": "^1.0"
     },
     "autoload": {
