--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,8 @@
     ],
     "require": {
         "php": "^8.0",
+        "filament/filament": "^3.0|^4.0",
         "filament/support": "^3.0|^4.0",
-        "illuminate/support": "^8.0|^9.0|^10.0|^11.0|^12.0",
         "spatie/laravel-package-tools": "^1.0"
     },
 
