--- a/composer.json
+++ b/composer.json
@@ -10,10 +10,16 @@
         }
     ],
     "require": {
-        "php": "^8.0",
-        "filament/filament": "^3.0|^4.0",
-        "filament/support": "^3.0|^4.0",
+        "php": "^8.1",
+        "filament/filament": "^3.0",
+        "illuminate/support": "^9.0|^10.0",
+        "guzzlehttp/guzzle": "^7.8",
         "spatie/laravel-package-tools": "^1.0"
+    },
+    "require-dev": {
+        "orchestra/testbench": "^7.0|^8.0",
+        "phpunit/phpunit": "^9.5|^10.0",
+        "pestphp/pest": "^1.21"
     },
 
     "autoload": {
