fix: correct PSR-4 autoloading namespace

--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
     },
     "autoload": {
         "psr-4": {
-            "MCBANKSKE\\\\FilamentSmsNotifier\\\\": "src/"
+            "MCBANKSKE\\FilamentSmsNotifier\\": "src/"
         },
         "files": [
             "src/helpers.php"
