--- a/composer.json
+++ b/composer.json
@@ -11,9 +11,10 @@
         }
     ],
     "require": {
-        "php": "^8.1",
+        "php": "^8.2",
+        "guzzlehttp/guzzle": "^7.0",
+        "illuminate/support": "^9.0|^10.0|^11.0|^12.0",
         "laravel/framework": "^9.0|^10.0|^11.0|^12.0",
-        "guzzlehttp/guzzle": "^7.8",
         "spatie/laravel-package-tools": "^1.16.4"
     },
     "require-dev": {
